@@ -12,6 +12,13 @@ override_dh_auto_install:
 		   debian/virtualenvwrapper/usr/share/doc/virtualenvwrapper/$$lang \
 		   debian/virtualenvwrapper/usr/share/doc/virtualenvwrapper/$$lang/html ; \
 	done
+	for lang in es ja; do \
+		currentdir=$(pwd); \
+		cd debian/virtualenvwrapper/usr/share/doc/virtualenvwrapper/$$lang/html; \
+		rm -rf _static; \
+		ln -s ../../en/_static _static; \
+		cd "$currentdir"; \
+	done
 	cp virtualenvwrapper.sh debian/virtualenvwrapper/etc/bash_completion.d/virtualenvwrapper
 	chmod 0644 debian/virtualenvwrapper/etc/bash_completion.d/virtualenvwrapper
 	dh_auto_install
